<resources>
    <string name="app_name">JavaRush</string>
    <string name="app_name_after">Register app</string>
    <string name="app_in_name">Курс Java</string>
    <string name="btnSignIn">Войти</string>
    <string name="btnRegister">Зарегистрироваться</string>
    <string name="text_bottom">Войдите в свою учетную запись!</string>
    <string name="menu_drawer_open">Open menu drawer</string>
    <string name="menu_drawer_close">close menu drawer</string>
    <string name="javarash_text">Программистом может стать каждый: нужен только правильный подход к обучению. И мы его нашли :)</string>
    <string name="javarash_text1">О проекте</string>
    <string name="javarash_text2">Привет! Рады видеть вас на JavaRush — онлайн-курсе по изучению Java-программирования с нуля. Вам наверняка интересно, кто мы и чем можем быть вам полезны. Что же, с удовольствием об этом расскажем :)</string>
    <string name="javarash_text3">Идея проекта возникла летом 2012 года. Все началось с публикации этого поста о личном опыте переучивания на Java-девелоперов людей из разных сфер. У некоторых учеников был технический опыт, некоторые учились с чистого листа.</string>
    <string name="javarash_text4">На занятия уходило примерно 3 месяца. Из них большая часть уроков состояла из практики написания кода. Все ученики успешно находили любимую работу в Java-программировании, независимо от стартового уровня.
Когда желающих стало слишком много для частного преподавания, появилсь мысль: а что если сделать курс, который поможет научиться программировать на Java так же эффективно, как и с ментором, но при этом — в онлайн-формате? Чтобы обучению можно было посвящать столько времени, сколько нужно, и заниматься по удобному для себя графику.
</string>
    <string name="javarash_text5">Так появился JavaRush.</string>

    <string name="javarash_text6">Наша цель — ваше трудоустройство</string>
    <string name="javarash_text7">Чтобы наработать навык программирования и сформировать «правильное» мышление, понадобится около 500-1000 часов практики. Курс JavaRush разработан так, чтобы вы получили необходимое количество опыта.
Курс обучения — это инструмент для достижения главной цели — работы Java-разработчиком. Он поможет вам:</string>

    <string name="javarash_text8">1. Освоить основы Java и почувствовать себя уверенно в программировании, даже если вы в этой сфере новичок.</string>
    <string name="javarash_text9">2. Оставаться мотивированным до конца обучения, ведь иногда так сложно заниматься систематически и не остановиться на полпути.</string>
    <string name="javarash_text10">3. Учиться интересно, если вы уже поняли, что объемные книги и длинные видеокурсы не сделают из вас программиста.</string>
    <string name="javarash_text11">JavaRush — это не только обучающий курс, но и крупнейшее Java-сообщество</string>

    <string name="javarash_text12">Сегодня на JavaRush зарегистрировано более 1.6 миллиона пользователей из 106 стран. В нашей группе Вконтакте — 450 тысяч подписчиков, на Facebook — более 45 тысяч.
Здесь вы найдете единомышленников:</string>
    <string name="javarash_text13">Форум для любых обсуждений об обучении и карьере
Чат для живого общения с другими пользователями
Группы по интересам для чтения и постинга статей о программировании, поиске работы, специализации, личном опыте
</string>
    <string name="javarash_text14">О команде</string>
    <string name="javarash_text15">Мы всегда рядом! Наша команда помогает с вопросами по решению задач из курса и участвует в обсуждениях на форуме. А еще вы можете обратиться с любым вопросом по курсу в нашу службу поддержки, которая ответит вам в любой день недели.

Мы каждый день работаем над улучшением курса и ставим планы по запуску новых фич на год вперед :)
</string>
    <string name="javarash_text16">В JavaRush работают люди, которые верят, что обучение должно быть интересным, мотивирующим и практическим. И, конечно же, среди нас есть те, кто и сам начинал изучение Java с JavaRush.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_first_section">Screen lock</string>
    <string name="zadacha">"Команды зависят от того, кто их исполняет. Какие команды знает (и понимает) исполнитель.  "</string>
    <string name="zadacha1">— Собаке можно дать команду «Сидеть», «Голос», кошке – «Брысь», человеку – «Стоять! Стрелять буду»,
        ну а роботу — «Работай! Работай, твою робомать»"</string>
    <string name="zadacha2">Ну а все-таки? – Амиго заметно повеселел.</string>
    <string name="zadacha3">Программы, написанные на языке Java, исполняет JVM (Java Virtual Machine – виртуальная машина Java).
        JVM — это специальная программа, которая умеет исполнять программы, написанные на языке Java. Список ее команд довольно обширен.
        Например, этой командой можно вывести на экран надпись «Робот друг человека».</string>
    <string name="zadacha4">— O_O</string>
    <string name="zadacha5">Но мы начнем не сразу с команд, а с пары простых принципов. Знание нескольких принципов заменяет знание многих фактов.
        Принцип первый. В языке программирования Java каждую команду принято писать с новой строчки. В конце команды ставится точка с запятой.
        Допустим, мы хотим 3 раза вывести на экран надпись «Человек и робот друзья навек». Вот как это будет выглядеть:</string>
    <string name="zadacha6">Принцип второй.</string>
    <string name="zadacha7">Программа не может состоять только из команд. Представь себе комнату. Комната не может быть сама по себе.
        Она — часть какой-то квартиры. Квартира тоже не может существовать сама по себе, она находится в каком-то доме.
        С другой стороны можно сказать, что дом делится на квартиры, а квартиры делятся на комнаты. Пока понятно.</string>
    <string name="zadacha8">Так вот, команда – это как комната. В языке программирования Java команда не может быть сама по себе,
        она – часть функции (в Java функции еще называют методами). А метод – это часть класса. Или, другими словами, класс делится на методы,
        а методы на команды. Т.е. класс – это многоквартирный дом, функция/метод – это квартира, а команда – это комната.
        Я правильно все понял?
        Да, абсолютно верно.  Амиго с почти благоговением смотрел на Ришу. Этот человек объясняет ему основы программирования на божественном языке Java.
        И он, Амиго, только что понял, сам догадался(!), что программы состоят из классов, классы содержат методы, а методы – команды.  Зачем это все надо,
        Амиго еще не понимал, но был уверен, что это знание сделает его самым могущественным роботом на планете.</string>
    <string name="zadacha9">"Риша между тем продолжал:  "</string>
    <string name="zadacha10">Программы на языке Java состоят из классов. Классов может быть десятки тысяч. Минимальная программа – один класс.
        Для каждого класса заводится отдельный файл, имя которого совпадает с именем класса.
        Допустим, ты решил создать класс, который будет описывать дом (дом по-английски – house/home).
        Тогда тебе нужно создать класс Home, который будет содержаться в файле Home.java.
        Если же ты решил описать в программе, например, кота (Cat – кот, по-английски), то тогда тебе нужно создать файл Cat.
        java и в нем описать класс Cat и т.д. Внутри файлов содержится код (текст) на языке программирования Java.
        Обычно код класса состоит из «имени класса» и «тела класса». Тело класса помещается в фигурные скобочки.
        Вот как может выглядеть класс Home (файл Home.java):</string>
    <string name="zadacha11">Пока понятно.</string>
    <string name="zadacha12">Выведите на экран сообщение: «Java реально рулит!».</string>
    <string name="zadacha13">Вы можете вывести сообщение любым способом</string>
    <string name="zadacha14">Задание</string>
</resources>