<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ZadachaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp" />

            <ImageView
                android:id="@+id/main_background"
                android:layout_width="397dp"
                android:layout_height="110dp"
                android:layout_marginTop="14dp"
                android:src="@drawable/asdfs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/main_background1"
                android:layout_width="397dp"
                android:layout_height="179dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/originalll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha4"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha5"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp" />

            <ImageView
                android:id="@+id/main_background2"
                android:layout_width="397dp"
                android:layout_height="110dp"
                android:layout_marginTop="14dp"
                android:src="@drawable/adas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha6"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha7"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha8"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha9"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha10"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp" />

            <ImageView
                android:id="@+id/main_background3"
                android:layout_width="397dp"
                android:layout_height="179dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/qwert"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha11"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha14"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha12"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zadacha13"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="7dp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>